--- a/static/index.html
+++ b/static/index.html
@@ -39,7 +39,9 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
             try {
                 if (xhr.status==200) {
                     //XXX: parse some JSON from the request!
+                    var info = JSON.parse(xhr.responseText)
                     //XXX: Pass the data to the callback!
+                    callback(info)
                 }
             } 
             catch(e) {
@@ -48,7 +50,11 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
         }
     };
     //XXX: POST to a URL
+    xhr.open("POST",url,true)
     //XXX: set the mimetype and the accept headers!
+    xhr.setRequestHeader("Content-type","application/json")
+    xhr.setRequestHeader("Accept","application/json")
+    xhr.send(JSON.stringify(objects))
     // Remember to use application/json !
 }
 
@@ -66,6 +72,7 @@ function drawCircle(context,entity) {
         fillStyle = entity["colour"];
         strokeStyle = fillStyle;
         arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);  
+        fill(); //circle fill
         stroke();                                
     }
 }
@@ -138,6 +145,7 @@ function addEntity(entity, data) {
     world[entity] = data;
     drawNextFrame(); // (but should we?)
     //XXX: Send a XHTML Request that updates the entity you just  modified!
+    sendJSONXMLHTTPRequest("/entity/"+entity, data, function(){});
 
 }
 
@@ -261,7 +269,12 @@ mouse.mousedraggers.push(function(x,y,clicked,e) {
 
 
 function update() {
+    function callback(XMLworld){
+        world = XMLworld;
+        drawNextFrame();
+    }
     //XXX: TODO Get the world from the webservice using a XMLHTTPRequest
+    sendJSONXMLHTTPRequest("/world",null,callback)
     drawFrame();
 }
 
